fix: restore pre-commit-config
Signed-off-by: Samuel K <skevetter@pm.me>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -57,5 +57,6 @@ repos:
     hooks:
       - id: go-fmt
       - id: go-imports
-      - id: golangci-lint-repo-mod
-        args: [--fix, --new]
+      - id: golangci-lint
+        pass_filenames: false
+        args: [--new-from-rev=HEAD]
